syntax = "proto3";
option csharp_namespace = "GrpcGreeterClient";
package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply){}
}

// 请求信息类，自动生成类代码
message HelloRequest {
  string name = 1;//name => Name
}

// 相应信息类，自动生成类代码
message HelloReply {
  string message = 1;
  string status = 2;
}